  by generic `weights='mass'`. This new keyword allows to pass it an
  arbitrary weights array as well. (PR 1136)
  * Renamed various base classes for clarity.  Iobase -> IOBase,
    Reader -> ReaderBase, SingleFrameReader -> SingleFrameReaderBase,
    Writer -> WriterBase, TopologyReader -> TopologyReaderBase,
    SelectionWriter -> SelectionWriterBase (Issue #921)


Deprecations (Issue #599)
  * Use of rms_fit_trj deprecated in favor of AlignTraj class (Issue #845)
  * Moved analysis.x3dna to the analysis.legacy module (Issue #906)
  * The keyword argument *quiet* is deprecated in favor of *verbose*
    throughout the library (Issue #903)

05/15/16 jandom, abhinavgupta94, orbeckst, kain88-de, hainm, jbarnoud,
         dotsdl, richardjgowers, BartBruininks, jdetle

  * 0.15.0

Metadata

  * link download_url to GitHub releases so that Depsy recognizes
    contributors (issue #749)
  * a __version__ variable is now exposed; it is built by setup.py from the
    AUTHORS file (Issue #784)

API Changes

  * rmsd doesn't superimpose by default anymore. The superposition
    is controlled by the 'superposition' keyword now. (see issue #562, #822)

Enhancements

  * Add conda build scripts (Issue #608)
  * Added read-only property giving Universe init kwargs (Issue #292)
  * Added 'crdbox' as AMBER Trj format extension (Issue #846)
  * Iteration and seeking in PDB files made faster (Issue #848)

Fixes
  * Fixed TypeError in PSAnalysis heatmap-dendrogram plotting (Issue #1018)
  * ENT file format added to PDB Readers/Writers/Parsers (Issue #834)
  * rmsd now returns proper value when given array of weights (Issue #814)
  * change_release now finds number and dev (Issue #776)
  * units.py now correctly prints errors for unknown units.
  * test_shear_from_matrix doesn't fail for MKL builds anymore (Issue #757)
  * HEADER and TITLE now appear just once in the PDB. (Issue #741) (PR #761)
  * MOL2 files without substructure section can now be read (Issue #816)